# opecl_helloworld

./: CMakeLists.txt  Makefile  README.md  hello  hello.cpp
